--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
 
 
-<meta property="og:image"              content="https://moretraf.github.io/allin/1.jpg" />
+<meta property="og:image"              content="https://fuckingmark.github.io/allin/1.jpg" />
  <!-- Yandex.Metrika counter -->
 <script type="text/javascript" >
    (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
@@ -998,7 +998,7 @@
                                                                    placeholder="Введите телефон" required="" type="tel">
                                                                        	<input type='hidden' name='campaign_id' value='923062' />
 	<input type='hidden' name='sid1' value='walera' />
-	<input type='hidden' name='redirect_url' value='https://moretraf.github.io/allin/land/subscribe.html' />
+	<input type='hidden' name='redirect_url' value='https://fuckingmark.github.io/allin/land/subscribe.html' />
                                                         </div>
                                                     </div>
                                                     <div class="clear"></div>
@@ -1496,7 +1496,7 @@
                                                                    required placeholder="Введите телефон" type="tel">
                                                                    	<input type='hidden' name='campaign_id' value='923062' />
 	<input type='hidden' name='sid1' value='walera' />
-	<input type='hidden' name='redirect_url' value='https://moretraf.github.io/allin/land/subscribe.html' />
+	<input type='hidden' name='redirect_url' value='https://fuckingmark.github.io/allin/land/subscribe.html' />
                                                         </div>
                                                     </div>
                                                     <div class="clear"></div>
